tests/NormalTests/paczka1/small_fuzzy/35293952.err
Error in line 7: QZtRq61hwf S357 41,9
Error in line 10: QZtRq61hwf S663 119,70
